force-app/main/default/objects/sugati__Client_Payment_Detail__c/sugati__Client_Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Client Payment Detail</label>
    <nameField>
        <displayFormat>CPD-{00000000}</displayFormat>
        <label>Client Payment Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>