force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Amount__c</fullName>
    <inlineHelpText>A split amount for the client group.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>