force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Booking_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Booking_Reference_Number__c</fullName>
    <formula>sugati__CPD_Client_Payment__r.sugati__CP_Opportunity__r.sugati__O_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Reference Number</label>
    <type>Text</type>
</CustomField>