force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Client Payment Details</relationshipLabel>
    <relationshipName>Client_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>