force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Client_Name__c</fullName>
    <formula>TEXT(sugati__CPD_Group_Member__r.sugati__GM_Contact__r.Salutation)   +&apos; &apos;+ sugati__CPD_Group_Member__r.sugati__GM_Contact__r.FirstName +&apos; &apos;+ sugati__CPD_Group_Member__r.sugati__GM_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>