force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Client_Payment__c</fullName>
    <label>Client Payment</label>
    <referenceTo>sugati__Client_Payment__c</referenceTo>
    <relationshipLabel>Client Payment Details</relationshipLabel>
    <relationshipName>Client_Payment_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>