force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Departure_Date__c</fullName>
    <formula>sugati__CPD_Client_Payment__r.sugati__CP_Opportunity__r.sugati__O_Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>