force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Group_Member__c</fullName>
    <label>Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipLabel>Client Payment Details</relationshipLabel>
    <relationshipName>Client_Payment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>