force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Opportunity__c</fullName>
    <formula>sugati__CPD_Client_Payment__r.sugati__CP_Opportunity__c</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>