force-app/main/default/objects/sugati__Client_Payment_Detail__c/fields/sugati__CPD_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPD_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
                <default>true</default>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>